# vidinfo

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: index.html  main.js  styles.css
src/: error.rs  ffprobe.rs  format_helpers.rs  input.rs  lib.rs  main.rs  model.rs
src/render/: compact.rs  compare.rs  json_out.rs  mod.rs  report.rs
tests/fixtures/: sample_mkv.json  sample_mp4.json
